# Test suite — Catch2 via cmake/dependencies.cmake
include(CTest)
include(Catch)

# Tests are registered here as engine code lands:
#   add_executable(test_foo foo_test.cpp)
#   target_link_libraries(test_foo PRIVATE Catch2::Catch2WithMain engine-content)
#   catch_discover_tests(test_foo)

add_executable(test_renderer test_renderer.cpp)
target_link_libraries(test_renderer PRIVATE Catch2::Catch2WithMain platform-hal)
target_include_directories(test_renderer PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_renderer)

add_executable(test_bridge test_bridge.cpp)
target_link_libraries(test_bridge PRIVATE Catch2::Catch2WithMain engine-render)
target_include_directories(test_bridge PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_bridge)

add_executable(test_scene_renderer test_scene_renderer.cpp)
target_link_libraries(test_scene_renderer PRIVATE Catch2::Catch2WithMain engine-render)
target_include_directories(test_scene_renderer PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_scene_renderer)

add_executable(test_flight_hud test_flight_hud.cpp)
target_link_libraries(test_flight_hud PRIVATE Catch2::Catch2WithMain engine-render)
target_include_directories(test_flight_hud PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_flight_hud)

add_executable(test_windshield_rain test_windshield_rain.cpp)
target_link_libraries(test_windshield_rain PRIVATE Catch2::Catch2WithMain engine-render)
target_include_directories(test_windshield_rain PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_windshield_rain)

add_executable(test_particle_system test_particle_system.cpp)
target_link_libraries(test_particle_system PRIVATE Catch2::Catch2WithMain engine-render)
target_include_directories(test_particle_system PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_particle_system)

add_executable(test_entity test_entity.cpp)
target_link_libraries(test_entity PRIVATE Catch2::Catch2WithMain engine-entity)
target_include_directories(test_entity PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_entity)

add_executable(test_atmosphere test_atmosphere.cpp)
target_link_libraries(test_atmosphere PRIVATE Catch2::Catch2WithMain engine-flight)
catch_discover_tests(test_atmosphere)

add_executable(test_table2d test_table2d.cpp)
target_link_libraries(test_table2d PRIVATE Catch2::Catch2WithMain engine-flight)
catch_discover_tests(test_table2d)

add_executable(test_flight_model_parser test_flight_model_parser.cpp)
target_link_libraries(test_flight_model_parser PRIVATE Catch2::Catch2WithMain engine-flight)
catch_discover_tests(test_flight_model_parser)

add_executable(test_aero_forces test_aero_forces.cpp)
target_link_libraries(test_aero_forces PRIVATE Catch2::Catch2WithMain engine-flight)
catch_discover_tests(test_aero_forces)

add_executable(test_flight_integrator test_flight_integrator.cpp)
target_link_libraries(test_flight_integrator PRIVATE Catch2::Catch2WithMain engine-flight)
catch_discover_tests(test_flight_integrator)

add_executable(test_central_gravity test_central_gravity.cpp)
target_link_libraries(test_central_gravity PRIVATE Catch2::Catch2WithMain engine-flight)
catch_discover_tests(test_central_gravity)

add_executable(test_geodetic test_geodetic.cpp)
target_link_libraries(test_geodetic PRIVATE Catch2::Catch2WithMain engine-flight)
catch_discover_tests(test_geodetic)

add_executable(test_force_model test_force_model.cpp)
target_link_libraries(test_force_model PRIVATE Catch2::Catch2WithMain engine-flight)
catch_discover_tests(test_force_model)

add_executable(test_loop test_loop.cpp)
target_link_libraries(test_loop PRIVATE Catch2::Catch2WithMain engine-loop)
target_include_directories(test_loop PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_loop)

add_executable(test_sandbox test_sandbox.cpp)
target_link_libraries(test_sandbox PRIVATE Catch2::Catch2WithMain engine-sandbox)
target_include_directories(test_sandbox PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_sandbox)

add_executable(test_content_system test_content_system.cpp)
target_link_libraries(test_content_system PRIVATE Catch2::Catch2WithMain engine-content engine-difficulty)
catch_discover_tests(test_content_system)

add_executable(test_difficulty test_difficulty.cpp)
target_link_libraries(test_difficulty PRIVATE Catch2::Catch2WithMain engine-difficulty)
target_include_directories(test_difficulty PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_difficulty)

add_executable(test_input test_input.cpp)
target_link_libraries(test_input PRIVATE Catch2::Catch2WithMain engine-input)
catch_discover_tests(test_input)

add_executable(test_localization test_localization.cpp)
target_link_libraries(test_localization PRIVATE Catch2::Catch2WithMain engine-i18n)
catch_discover_tests(test_localization)

add_executable(test_firstrun test_firstrun.cpp)
target_link_libraries(test_firstrun PRIVATE Catch2::Catch2WithMain engine-firstrun)
target_include_directories(test_firstrun PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_firstrun)

add_executable(test_file_logger test_file_logger.cpp)
target_link_libraries(test_file_logger PRIVATE Catch2::Catch2WithMain platform-file-logger)
catch_discover_tests(test_file_logger)

add_executable(test_crash_reporter test_crash_reporter.cpp)
target_link_libraries(test_crash_reporter PRIVATE Catch2::Catch2WithMain engine-crash platform-file-logger)
target_include_directories(test_crash_reporter PRIVATE ${CMAKE_BINARY_DIR}/engine)
catch_discover_tests(test_crash_reporter)

add_executable(test_userconfig test_userconfig.cpp)
target_link_libraries(test_userconfig PRIVATE Catch2::Catch2WithMain engine-config)
target_include_directories(test_userconfig PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_userconfig)

add_executable(test_settings test_settings.cpp)
target_link_libraries(test_settings PRIVATE Catch2::Catch2WithMain engine-config)
target_include_directories(test_settings PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_settings)

# Integration: verify locale files are in sync with source key references
if(TARGET locale-extract)
    add_test(NAME locale_lint
        COMMAND $<TARGET_FILE:locale-extract>
                --src "${CMAKE_SOURCE_DIR}/engine"
                --locale "${CMAKE_SOURCE_DIR}/locale"
                --dry-run
        WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
    )
endif()

if(TARGET platform-enet)
    add_executable(test_network test_network.cpp)
    target_link_libraries(test_network PRIVATE Catch2::Catch2WithMain platform-enet)
    target_include_directories(test_network PRIVATE
        "${CMAKE_SOURCE_DIR}/platform/net"
    )
    catch_discover_tests(test_network)

    add_executable(test_server_config test_server_config.cpp)
    target_link_libraries(test_server_config PRIVATE Catch2::Catch2WithMain fl-server-config)
    target_include_directories(test_server_config PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
    catch_discover_tests(test_server_config)

    # bot_swarm pure-logic tests (patterns, NetStats, CLI, metrics, server_tick block) — no
    # sockets. platform-hal supplies the IClock.h include pulled in via perf/ServerTickReport.h.
    add_executable(test_bot_swarm test_bot_swarm.cpp)
    target_link_libraries(test_bot_swarm PRIVATE Catch2::Catch2WithMain platform-hal)
    target_include_directories(test_bot_swarm PRIVATE
        "${CMAKE_SOURCE_DIR}/tools/bot_swarm"
        "${CMAKE_SOURCE_DIR}/tools/common"
        "${CMAKE_SOURCE_DIR}/engine"
    )
    catch_discover_tests(test_bot_swarm)

    # Per-phase tick profiler + server tick report (header-only; platform-hal for IClock.h).
    add_executable(test_tick_profiler test_tick_profiler.cpp)
    target_link_libraries(test_tick_profiler PRIVATE Catch2::Catch2WithMain platform-hal)
    target_include_directories(test_tick_profiler PRIVATE "${CMAKE_SOURCE_DIR}/engine")
    catch_discover_tests(test_tick_profiler)

    add_executable(test_server_tick_report test_server_tick_report.cpp)
    target_link_libraries(test_server_tick_report PRIVATE Catch2::Catch2WithMain platform-hal)
    target_include_directories(test_server_tick_report PRIVATE "${CMAKE_SOURCE_DIR}/engine")
    catch_discover_tests(test_server_tick_report)

    add_executable(test_lan_discovery test_lan_discovery.cpp)
    target_link_libraries(test_lan_discovery PRIVATE Catch2::Catch2WithMain engine-net)
    target_include_directories(test_lan_discovery PRIVATE
        "${CMAKE_SOURCE_DIR}/engine"
        "${CMAKE_CURRENT_SOURCE_DIR}")
    catch_discover_tests(test_lan_discovery)

    add_executable(test_admin_console test_admin_console.cpp
        "${CMAKE_SOURCE_DIR}/server/fl-server/ServerCommands.cpp")
    target_link_libraries(test_admin_console PRIVATE
        Catch2::Catch2WithMain
        fl-server-config engine-console engine-net engine-entity engine-weather engine-loop
        engine-ai engine-script)
    target_include_directories(test_admin_console PRIVATE
        "${CMAKE_SOURCE_DIR}/server/fl-server"
        "${CMAKE_CURRENT_SOURCE_DIR}")
    catch_discover_tests(test_admin_console)

    add_executable(test_rcon_server test_rcon_server.cpp
        "${CMAKE_SOURCE_DIR}/server/fl-server/RconServer.cpp")
    target_link_libraries(test_rcon_server PRIVATE
        Catch2::Catch2WithMain fl-server-config engine-console)
    target_include_directories(test_rcon_server PRIVATE
        "${CMAKE_SOURCE_DIR}/server/fl-server"
        "${CMAKE_CURRENT_SOURCE_DIR}")
    if(WIN32)
        target_link_libraries(test_rcon_server PRIVATE ws2_32)
    endif()
    catch_discover_tests(test_rcon_server)
endif()

add_executable(test_ai_controllers test_ai_controllers.cpp)
target_link_libraries(test_ai_controllers PRIVATE engine-ai engine-entity engine-spatial Catch2::Catch2WithMain)
catch_discover_tests(test_ai_controllers)

add_executable(test_spatial_index test_spatial_index.cpp)
target_link_libraries(test_spatial_index PRIVATE Catch2::Catch2WithMain engine-spatial)
catch_discover_tests(test_spatial_index)

add_executable(test_job_system test_job_system.cpp)
target_link_libraries(test_job_system PRIVATE Catch2::Catch2WithMain engine-job)
catch_discover_tests(test_job_system)

add_executable(test_faction_registry test_faction_registry.cpp)
target_link_libraries(test_faction_registry PRIVATE Catch2::Catch2WithMain engine-world)
catch_discover_tests(test_faction_registry)

add_executable(test_audio test_audio.cpp)
target_link_libraries(test_audio PRIVATE Catch2::Catch2WithMain platform-openal OpenAL::OpenAL)
target_include_directories(test_audio PRIVATE "${CMAKE_SOURCE_DIR}/platform/openal")
if(WIN32)
    add_custom_command(TARGET test_audio POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            $<TARGET_FILE:OpenAL::OpenAL>
            $<TARGET_FILE_DIR:test_audio>
    )
endif()
catch_discover_tests(test_audio DISCOVERY_MODE PRE_TEST)

add_executable(test_subtitle_queue test_subtitle_queue.cpp)
target_link_libraries(test_subtitle_queue PRIVATE Catch2::Catch2WithMain engine-audio)
catch_discover_tests(test_subtitle_queue)

add_executable(test_music_manager test_music_manager.cpp)
target_link_libraries(test_music_manager PRIVATE Catch2::Catch2WithMain engine-audio engine-config)
catch_discover_tests(test_music_manager)

add_executable(test_async_filesystem test_async_filesystem.cpp)
target_link_libraries(test_async_filesystem PRIVATE Catch2::Catch2WithMain platform-hal)
target_include_directories(test_async_filesystem PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_async_filesystem)

add_executable(test_sdl3 test_sdl3.cpp)
target_link_libraries(test_sdl3 PRIVATE Catch2::Catch2WithMain platform-sdl3 SDL3::SDL3)
target_include_directories(test_sdl3 PRIVATE "${CMAKE_SOURCE_DIR}/platform/sdl3")
if(WIN32)
    add_custom_command(TARGET test_sdl3 POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            $<TARGET_FILE:SDL3::SDL3>
            $<TARGET_FILE_DIR:test_sdl3>
    )
endif()
catch_discover_tests(test_sdl3 DISCOVERY_MODE PRE_TEST)

add_executable(test_cursor test_cursor.cpp)
target_link_libraries(test_cursor PRIVATE Catch2::Catch2WithMain platform-sdl3)
target_include_directories(test_cursor PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    "${CMAKE_SOURCE_DIR}/platform/sdl3"
)
if(WIN32)
    add_custom_command(TARGET test_cursor POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            $<TARGET_FILE:SDL3::SDL3>
            $<TARGET_FILE_DIR:test_cursor>
    )
endif()
catch_discover_tests(test_cursor DISCOVERY_MODE PRE_TEST)

add_executable(test_display test_display.cpp)
target_link_libraries(test_display PRIVATE Catch2::Catch2WithMain platform-sdl3)
target_include_directories(test_display PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    "${CMAKE_SOURCE_DIR}/platform/sdl3"
)
if(WIN32)
    add_custom_command(TARGET test_display POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            $<TARGET_FILE:SDL3::SDL3>
            $<TARGET_FILE_DIR:test_display>
    )
endif()
catch_discover_tests(test_display DISCOVERY_MODE PRE_TEST)

add_executable(test_joystick test_joystick.cpp)
target_link_libraries(test_joystick PRIVATE Catch2::Catch2WithMain platform-sdl3)
target_include_directories(test_joystick PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    "${CMAKE_SOURCE_DIR}/platform/sdl3"
)
if(WIN32)
    add_custom_command(TARGET test_joystick POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            $<TARGET_FILE:SDL3::SDL3>
            $<TARGET_FILE_DIR:test_joystick>
    )
endif()
catch_discover_tests(test_joystick DISCOVERY_MODE PRE_TEST)

add_executable(test_input_hal test_input_hal.cpp)
target_link_libraries(test_input_hal PRIVATE Catch2::Catch2WithMain platform-sdl3)
target_include_directories(test_input_hal PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    "${CMAKE_SOURCE_DIR}/platform/sdl3"
)
if(WIN32)
    add_custom_command(TARGET test_input_hal POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            $<TARGET_FILE:SDL3::SDL3>
            $<TARGET_FILE_DIR:test_input_hal>
    )
endif()
catch_discover_tests(test_input_hal DISCOVERY_MODE PRE_TEST)

add_executable(test_validate_flight_model test_validate_flight_model.cpp)
target_link_libraries(test_validate_flight_model
    PRIVATE Catch2::Catch2WithMain validate-flight-model-lib)
catch_discover_tests(test_validate_flight_model)

add_executable(test_validate_mission test_validate_mission.cpp)
target_link_libraries(test_validate_mission
    PRIVATE Catch2::Catch2WithMain validate-mission-lib)
catch_discover_tests(test_validate_mission)

add_executable(test_validate_licenses test_validate_licenses.cpp)
target_link_libraries(test_validate_licenses
    PRIVATE Catch2::Catch2WithMain validate-licenses-lib)
catch_discover_tests(test_validate_licenses)

add_executable(test_validate_mesh test_validate_mesh.cpp)
target_link_libraries(test_validate_mesh
    PRIVATE Catch2::Catch2WithMain validate-mesh-lib)
catch_discover_tests(test_validate_mesh)

add_executable(test_tex_compress test_tex_compress.cpp)
target_link_libraries(test_tex_compress
    PRIVATE Catch2::Catch2WithMain tex-compress-lib)
catch_discover_tests(test_tex_compress)

add_executable(test_async_filesystem_sdl3 test_async_filesystem_sdl3.cpp)
target_link_libraries(test_async_filesystem_sdl3 PRIVATE Catch2::Catch2WithMain platform-sdl3)
target_include_directories(test_async_filesystem_sdl3 PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    "${CMAKE_SOURCE_DIR}/platform/sdl3"
)
if(WIN32)
    add_custom_command(TARGET test_async_filesystem_sdl3 POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            $<TARGET_FILE:SDL3::SDL3>
            $<TARGET_FILE_DIR:test_async_filesystem_sdl3>
    )
endif()
catch_discover_tests(test_async_filesystem_sdl3 DISCOVERY_MODE PRE_TEST)

add_executable(test_game_protocol test_game_protocol.cpp)
target_link_libraries(test_game_protocol PRIVATE Catch2::Catch2WithMain engine-net engine-weather)
catch_discover_tests(test_game_protocol)

add_executable(test_wire_codec test_wire_codec.cpp)
target_link_libraries(test_wire_codec PRIVATE Catch2::Catch2WithMain engine-net)
catch_discover_tests(test_wire_codec)

add_executable(test_snapshot_codec test_snapshot_codec.cpp)
target_link_libraries(test_snapshot_codec PRIVATE Catch2::Catch2WithMain engine-net)
catch_discover_tests(test_snapshot_codec)

add_executable(test_snapshot_scheduler test_snapshot_scheduler.cpp)
target_link_libraries(test_snapshot_scheduler PRIVATE Catch2::Catch2WithMain engine-net)
catch_discover_tests(test_snapshot_scheduler)

add_executable(test_congestion_controller test_congestion_controller.cpp)
target_link_libraries(test_congestion_controller PRIVATE Catch2::Catch2WithMain engine-net)
catch_discover_tests(test_congestion_controller)

add_executable(test_tick_governor test_tick_governor.cpp)
target_link_libraries(test_tick_governor PRIVATE Catch2::Catch2WithMain engine-net)
catch_discover_tests(test_tick_governor)

add_executable(test_performance_overlay test_performance_overlay.cpp)
target_link_libraries(test_performance_overlay PRIVATE Catch2::Catch2WithMain engine-perf)
catch_discover_tests(test_performance_overlay)

add_executable(test_utf8_decode test_utf8_decode.cpp)
target_link_libraries(test_utf8_decode PRIVATE Catch2::Catch2WithMain platform-hal)
catch_discover_tests(test_utf8_decode)

add_executable(test_game_console test_game_console.cpp)
target_link_libraries(test_game_console PRIVATE Catch2::Catch2WithMain engine-console engine-entity engine-weather)
target_include_directories(test_game_console PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_game_console)

add_executable(test_command_shell test_command_shell.cpp)
target_link_libraries(test_command_shell PRIVATE Catch2::Catch2WithMain engine-console)
target_include_directories(test_command_shell PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_command_shell)

add_executable(test_world_broadcaster test_world_broadcaster.cpp)
target_link_libraries(test_world_broadcaster PRIVATE Catch2::Catch2WithMain engine-net engine-weather)
catch_discover_tests(test_world_broadcaster)

add_executable(test_weather test_weather.cpp)
target_link_libraries(test_weather PRIVATE Catch2::Catch2WithMain engine-weather)
catch_discover_tests(test_weather)

add_executable(test_terrain_chunk_io test_terrain_chunk_io.cpp)
target_link_libraries(test_terrain_chunk_io PRIVATE Catch2::Catch2WithMain engine-render)
target_include_directories(test_terrain_chunk_io PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_terrain_chunk_io)

add_executable(test_terrain_streamer test_terrain_streamer.cpp)
target_link_libraries(test_terrain_streamer PRIVATE Catch2::Catch2WithMain engine-render)
target_include_directories(test_terrain_streamer PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_terrain_streamer)

add_executable(test_config_file test_config_file.cpp)
target_link_libraries(test_config_file PRIVATE Catch2::Catch2WithMain engine-config)
catch_discover_tests(test_config_file)

add_executable(test_network_utils test_network_utils.cpp)
target_link_libraries(test_network_utils PRIVATE Catch2::Catch2WithMain engine-net)
catch_discover_tests(test_network_utils)

add_executable(test_subprocess test_subprocess.cpp)
target_link_libraries(test_subprocess PRIVATE Catch2::Catch2WithMain platform-subprocess)
catch_discover_tests(test_subprocess)

add_executable(test_manifest_sanitization test_manifest_sanitization.cpp)
target_link_libraries(test_manifest_sanitization PRIVATE Catch2::Catch2WithMain engine-content)
target_include_directories(test_manifest_sanitization PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_manifest_sanitization)

add_executable(test_trust_framework test_trust_framework.cpp)
target_link_libraries(test_trust_framework PRIVATE Catch2::Catch2WithMain engine-content)
target_include_directories(test_trust_framework PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_trust_framework)

add_executable(test_asset_validator test_asset_validator.cpp)
target_link_libraries(test_asset_validator PRIVATE Catch2::Catch2WithMain engine-content)
target_include_directories(test_asset_validator PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_asset_validator)

add_executable(test_lua_sandbox test_lua_sandbox.cpp)
target_link_libraries(test_lua_sandbox PRIVATE Catch2::Catch2WithMain engine-script)
target_include_directories(test_lua_sandbox PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_lua_sandbox)

add_executable(test_lua_controller test_lua_controller.cpp)
target_link_libraries(test_lua_controller PRIVATE
    Catch2::Catch2WithMain engine-script engine-spatial)
target_include_directories(test_lua_controller PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
catch_discover_tests(test_lua_controller)

add_executable(test_haptic_controller test_haptic_controller.cpp
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/HapticController.cpp")
target_link_libraries(test_haptic_controller PRIVATE
    Catch2::Catch2WithMain engine-render platform-hal)
target_include_directories(test_haptic_controller PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy"
    "${CMAKE_CURRENT_SOURCE_DIR}")
catch_discover_tests(test_haptic_controller)

add_executable(test_precipitation_controller test_precipitation_controller.cpp)
target_link_libraries(test_precipitation_controller PRIVATE
    Catch2::Catch2WithMain engine-render)
target_include_directories(test_precipitation_controller PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy"
    "${CMAKE_CURRENT_SOURCE_DIR}")
catch_discover_tests(test_precipitation_controller)

add_executable(test_flight_input_collector test_flight_input_collector.cpp
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/FlightInputCollector.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/CameraInput.cpp")
target_link_libraries(test_flight_input_collector PRIVATE
    Catch2::Catch2WithMain
    platform-hal
    platform-sdl3
    SDL3::SDL3
    engine-render
    engine-console
    engine-config
    engine-input
    engine-net)
target_include_directories(test_flight_input_collector PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy"
    "${CMAKE_CURRENT_SOURCE_DIR}")
if(WIN32)
    add_custom_command(TARGET test_flight_input_collector POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            $<TARGET_FILE:SDL3::SDL3>
            $<TARGET_FILE_DIR:test_flight_input_collector>)
endif()
catch_discover_tests(test_flight_input_collector)

add_executable(test_server_notice test_server_notice.cpp)
target_link_libraries(test_server_notice PRIVATE
    Catch2::Catch2WithMain platform-hal)
target_include_directories(test_server_notice PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy"
    "${CMAKE_CURRENT_SOURCE_DIR}")
catch_discover_tests(test_server_notice)

add_executable(test_client_net_event_handler test_client_net_event_handler.cpp
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/ClientNetEventHandler.cpp")
target_link_libraries(test_client_net_event_handler PRIVATE
    Catch2::Catch2WithMain engine-net engine-render engine-entity engine-console engine-weather platform-hal)
target_include_directories(test_client_net_event_handler PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy"
    "${CMAKE_CURRENT_SOURCE_DIR}")
catch_discover_tests(test_client_net_event_handler)

# ---------------------------------------------------------------------------
# Screen / ScreenManager tests
# ---------------------------------------------------------------------------

add_executable(test_main_menu_screen test_main_menu_screen.cpp
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/MainMenuScreen.cpp")
target_link_libraries(test_main_menu_screen PRIVATE Catch2::Catch2WithMain platform-hal)
target_include_directories(test_main_menu_screen PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy" "${CMAKE_CURRENT_SOURCE_DIR}")
catch_discover_tests(test_main_menu_screen)

add_executable(test_loading_screen test_loading_screen.cpp
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/LoadingScreen.cpp")
target_link_libraries(test_loading_screen PRIVATE Catch2::Catch2WithMain platform-hal)
target_include_directories(test_loading_screen PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy" "${CMAKE_CURRENT_SOURCE_DIR}")
catch_discover_tests(test_loading_screen)

add_executable(test_mission_select_screen test_mission_select_screen.cpp
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/MissionSelectScreen.cpp")
target_link_libraries(test_mission_select_screen PRIVATE Catch2::Catch2WithMain platform-hal)
target_include_directories(test_mission_select_screen PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy" "${CMAKE_CURRENT_SOURCE_DIR}")
catch_discover_tests(test_mission_select_screen)

add_executable(test_mission_brief_screen test_mission_brief_screen.cpp
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/MissionBriefScreen.cpp")
target_link_libraries(test_mission_brief_screen PRIVATE Catch2::Catch2WithMain platform-hal)
target_include_directories(test_mission_brief_screen PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy" "${CMAKE_CURRENT_SOURCE_DIR}")
catch_discover_tests(test_mission_brief_screen)

add_executable(test_settings_screen test_settings_screen.cpp
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/SettingsScreen.cpp")
target_link_libraries(test_settings_screen PRIVATE
    Catch2::Catch2WithMain engine-config platform-hal)
target_include_directories(test_settings_screen PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy" "${CMAKE_CURRENT_SOURCE_DIR}")
catch_discover_tests(test_settings_screen)

add_executable(test_pause_menu_screen test_pause_menu_screen.cpp
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/PauseMenuScreen.cpp")
target_link_libraries(test_pause_menu_screen PRIVATE Catch2::Catch2WithMain platform-hal)
target_include_directories(test_pause_menu_screen PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy" "${CMAKE_CURRENT_SOURCE_DIR}")
catch_discover_tests(test_pause_menu_screen)

add_executable(test_debrief_screen test_debrief_screen.cpp
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/DebriefScreen.cpp")
target_link_libraries(test_debrief_screen PRIVATE Catch2::Catch2WithMain platform-hal)
target_include_directories(test_debrief_screen PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy" "${CMAKE_CURRENT_SOURCE_DIR}")
catch_discover_tests(test_debrief_screen)

add_executable(test_screen_manager test_screen_manager.cpp
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/ScreenManager.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/MainMenuScreen.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/LoadingScreen.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/MissionSelectScreen.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/MissionBriefScreen.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/SettingsScreen.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/PauseMenuScreen.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/DebriefScreen.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/FlightScreen.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/ClientNetEventHandler.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/ClientPrediction.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/CameraInput.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/FlightInputCollector.cpp"
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/HapticController.cpp")
target_link_libraries(test_screen_manager PRIVATE
    Catch2::Catch2WithMain engine-config engine-render engine-sandbox engine-content engine-console engine-input engine-net engine-entity engine-weather engine-flight platform-sdl3 platform-hal SDL3::SDL3)
target_include_directories(test_screen_manager PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy" "${CMAKE_CURRENT_SOURCE_DIR}")
catch_discover_tests(test_screen_manager)

add_executable(test_connect_args test_connect_args.cpp)
target_link_libraries(test_connect_args PRIVATE Catch2::Catch2WithMain)
target_include_directories(test_connect_args PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy")
catch_discover_tests(test_connect_args)

add_executable(test_client_prediction test_client_prediction.cpp
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy/ClientPrediction.cpp")
target_link_libraries(test_client_prediction PRIVATE
    Catch2::Catch2WithMain
    engine-flight
    engine-render
    engine-net
    engine-config)
target_include_directories(test_client_prediction PRIVATE
    "${CMAKE_SOURCE_DIR}/game/fighters-legacy"
    "${CMAKE_CURRENT_SOURCE_DIR}")
catch_discover_tests(test_client_prediction)
